--- a/ClassLibraryTesting/ClassLibraryTesting.csproj
+++ b/ClassLibraryTesting/ClassLibraryTesting.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hiragana\Hiragana.csproj">
+      <Project>{d7288704-6d0f-49a9-820d-2932e178cc0f}</Project>
+      <Name>Hiragana</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
